# ch_dqn_V2

./: .gitignore  README.md  VERIFICATION_REPORT.md  environment.yml  pyproject.toml  requirements.txt
configs/ablation/: README.md
configs/environments/: cartpole_correlated.yaml  cartpole_delay.yaml  cartpole_exponential.yaml  cartpole_gaussian.yaml  cartpole_mixed.yaml  cartpole_nonstationary.yaml  cartpole_uniform.yaml  telemetry_mixed.yaml
configs/evaluation/: README.md
configs/model/: README.md
configs/optimizer/: README.md
configs/training/: README.md
docs/: 00_Project_Overview.md  01_Problem_Formulation.md  02_Algorithm_Architecture.md  03_V0_Belief_Verification.md  04_V1_Reliability_Bellman.md  05_V2_Long_Horizon_Optimization.md  06_Theoretical_Foundations.md  07_Training_Pipeline.md  08_Performance_Analysis.md  09_Failure_Modes.md  10_Scalability.md  11_Ablation_Study.md  12_Implementation_Checklist.md  13_Reproducibility.md  Appendix.md
examples/: run_reference_experiment.py
experiments/: __init__.py  run_ablation.py
paper/: bibliography.bib
results/: DQN_gaussian_seed0.csv  DQN_gaussian_seed42.csv  EXAMPLE_RESULTS.md  V0_gaussian_seed0.csv  V1_gaussian_seed0.csv  V1_nonstationary_seed0.csv  V2_gaussian_seed0.csv  V2_gaussian_seed123.csv  V2_gaussian_seed42.csv  V2_nonstationary_seed0.csv  learning_proof_v2.csv
results/benchmarks/: benchmark_summary.json
scripts/: ablation.py  benchmark.py  export_results.py  main_benchmark.py  package_results.py  profile.py  reproduce.py  train.py
src/chdqn/: __init__.py  config.py  (+6 more)
tests/: conftest.py
(+330 files in other folders)
